--- a/src/sass/_rwd.scss
+++ b/src/sass/_rwd.scss
@@ -33,11 +33,11 @@
   }
   .main {
     overflow: auto;
+    background: url('../img/bg.jpg');
+    will-change: transform;
+
     .main__bg {
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transform: none;
+      display: none;
     }
     .main__back {
       top: 12px;
@@ -231,7 +231,12 @@
     height: 60px;
     border-radius: 0px;
     transition: none;
-    transform: none;
+      transform: none;
+      &.open {
+        animation: none;
+        top: 0;
+        left: 0;
+      }
     &:before {
       top: 50%;
       right: 50%;
@@ -239,8 +244,6 @@
       margin-right: -20px;
       width: 40px;
       height: 40px;
-      // top: 12px;
-      // right: 60px;
     }
     &:hover {
       transform: none;
@@ -357,6 +360,8 @@
   #illus {
     .illus__content {
       .illus__content--item {
+        animation: none;
+        visibility: visible;
         .item__img {
           height: 200px;
         }
@@ -366,9 +371,19 @@
   #photos {
     .photos__content {
       .photos__content--item {
+        animation: none;
+        visibility: visible;
         .item__img {
           height: 200px;
         }
+      }
+    }
+  }
+  #web {
+    .web__content {
+      .web__content--item {
+        animation: none;
+        visibility: visible;
       }
     }
   }
