--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,8 +56,8 @@ button {
       top: 0;
       right: 0;
       box-shadow: 0px 0px 12px hsla(0,0%,0%,.5);
-      transform: rotate(0deg);
-      will-change: transform;
+      // transform: rotate(0deg);
+      // will-change: transform;
     }
     .main__back {
       right: 12px;
@@ -68,12 +68,13 @@ button {
   .main__bg {
     position: absolute;
     top: 100%;
-    right: 100%;
+    // right: 100%;
+    left: 0;
     width: 100%;
     height: 100%;
     background: url('../img/bg.jpg');
-    transform: rotate(90deg);
-    transform-origin: 0% 0%;
+    // transform: rotate(90deg);
+    // transform-origin: 0% 0%;
     transition: all 0.5s ease;
     z-index: -2;
   }
